Quick home page update

--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 		<title>CEP Bundler documentation</title>
 	</head>
 	<body>
-		<h1>Documentation to be created</h1>
+		<a href="/documentation/"
+			><h1>For Documentation</h1></a
+		>
+		<a href="/examples/"><h1>For Examples</h1></a>
+		<a
+			href="https://github.com/SamuelCharpentier/cep-bundle-core"
+			><h1>Projects Github page</h1></a
+		>
+		<a
+			href="https://www.npmjs.com/package/@samuel-charpentier/cep-bundler-core"
+			><h1>NPM Page</h1></a
+		>
 	</body>
 </html>
