--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 		<title>CEP Bundler documentation</title>
 	</head>
 	<body>
-		<a href="/documentation/"
+		<a href="./documentation/"
 			><h1>For Documentation</h1></a
 		>
-		<a href="/examples/"><h1>For Examples</h1></a>
+		<a href="./examples/"><h1>For Examples</h1></a>
 		<a
 			href="https://github.com/SamuelCharpentier/cep-bundle-core"
-			><h1>Projects Github page</h1></a
+			><h1>Github page</h1></a
 		>
 		<a
 			href="https://www.npmjs.com/package/@samuel-charpentier/cep-bundler-core"
